--- a/kube-apiserver/Dockerfile
+++ b/kube-apiserver/Dockerfile
@@ -1,2 +1,2 @@
-FROM k8s.gcr.io/kube-apiserver:v1.17.3
-MAINTAINER heqingbao <qingbao.ho@gmail.com>
+FROM k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2
+MAINTAINER chw <cao_haowen@cdv.com>
